<resources>
    <string name="app_name">YAPP</string>
    <string name="app_version">0.0.1</string>
    <string name="btn_home_buscar">BUSCAR</string>
    <string name="btn_home_descuentos">DESCUENTOS\nY PROMOS</string>
    <string name="btn_home_farmacias">FARMACIAS\nABIERTAS</string>
    <string name="btn_home_colabora">COLABORA</string>
    <string name="btn_promos_ahorro_cuidado_de_la_piel"><![CDATA[Ahorro en <b>Cuidado de la Piel</b>]]></string>
    <string name="btn_promos_ahorro_perfumes_y_fragancias"><![CDATA[Ahorro en <b>Perfumes y Fragancias</b>]]></string>
    <string name="btn_promos_ahorro_higiene_personal"><![CDATA[Ahorro en <b>Higiene Personal</b>]]></string>
    <string name="btn_promos_ahorro_por_tiempo_limitado"><![CDATA[Ahorro <b>Por Tiempo Limitado</b>]]></string>
    <string name="ahorra_en_cuidado_de_la_piel">Ahorrá en cuidado de la piel</string>
    <string name="ahorra_en_perfumes_y_fragancias">Ahorrá en perfumes y fragancias</string>
    <string name="ahorra_en_higiene_personal">Ahorrá en higiene personal</string>
    <string name="ahorro_por_tiempo_limitado">Ahorro por_tiempo_limitado</string>
    <string name="action_bar_title_promos">Descuentos y Promos</string>
    <string name="action_bar_title_home">Menú Inicio</string>
    <string name="action_bar_title_buscar_farmacia">Buscar Farmacia</string>
    <string name="buscar_title">Buscar Dirección</string>
    <string name="action_bar_title_buscar_producto">Buscar Productos</string>
    <string name="auto_complete_title_buscar_producto">Ingresa tus productos</string>
    <string name="product_buscar_tab">BUSCAR</string>
    <string name="product_ultimas_busquedas_tab">Últimas Búsquedas</string>
    <string name="product_mis_favoritos_tab">Mis Favoritos</string>
    <string name="search_product_ingresar_direccion">Ingresar dirección</string>
    <string name="search_products_productos_seleccionados">Productos Seleccionados</string>
    <string name="pharmacy_details_dialog_save">Guardar</string>
    <string name="pharmacy_details_dialog_address">Dirección</string>
    <string name="pharmacy_details_dialog_schedule_of_attention">Horarios de Atención</string>
    <string name="pharmacy_details_dialog_phone_number">Teléfono</string>
    <string name="pharmacy_details_dialog_shift">Ésta Farmacia está de Turno</string>
    <string name="btn_go">Ir</string>
    <string name="resultados_busqueda_producto_ver_todos_en_mapa">Ver Todos en Mapa</string>
    <string name="resultados_busqueda_producto_detalle_de_busqueda">Detalle de Búsqueda</string>
    <string name="action_bar_title_resultado_busqueda_producto">Resultados</string>
    <string name="resultados_busqueda_producto_precio_farmacias">Precio Farmacias</string>
    <string name="resultados_busqueda_producto_mas_cercanas">Más Cercanas</string>
    <string name="resultados_busqueda_producto_programa_ges">Programa GES y Paciente</string>
    <string name="loading">Cargando…</string>
    <string name="pharmacy_list_item_precio_con_descuento">COPAGO TRATAMIENTO</string>
    <string name="pharmacy_list_item_precio_regular">PRECIO REGULAR</string>
    <string name="resultados_busqueda_pharmacias_cantidad_resultados"> resultados</string>
    <string name="toast_response_no_tienes_farmacias_cercanas">No tienes farmacias cercanas</string>
    <string name="toast_response_no_se_pudo_completar_la_busqueda">No se pudo completar la busqueda</string>
    <string name="toast_response_debe_ingresar_una_direccion">Debe ingresar una direccion</string>
    <string name="toast_response_debe_ingresar_almenos_un_producto">Debe ingresar almenos un producto</string>
    <string name="pharmacy_details_status_closed">CERRADO</string>
    <string name="pharmacy_details_week_days">Lu-Vi:</string>
    <string name="pharmacy_details_saturday">Sábado:</string>
    <string name="pharmacy_details_sunday">Domingo:</string>
    <string name="request_location_permission_failed">Debes aceptar los permisos de ubicación</string>
    <string name="mi_ubicacion">Ubicación actual</string>
    <string name="dialog_option_yes">Si</string>
    <string name="dialog_option_no">No</string>
    <string name="dialog_text_gps_disabled">¿Tu GPS parece estar deshabilitado, quieres habilitarlo?</string>
    <string name="pharmacy_flag_status_open">Abierto</string>
    <string name="pharmacy_flag_status_closed">Cerrado</string>
    <string name="pharmacy_flag_status_closing">Cierre Proximo</string>
    <string name="error_message_internet_conection">Error de conexión</string>
    <string name="error_message_results_not_found">No se encontraron resultados</string>
    <string name="login_with_facebook"><![CDATA[Ingresar con tu <b>Facebook</b>]]></string>
    <string name="action_bar_title_ingresar">Ingresar</string>
    <string name="action_bar_title_nueva_cuenta">Nueva Cuenta</string>
    <string name="action_bar_title_bienvenido">Bienvenido</string>
    <string name="action_bar_title_perfil">Perfil</string>
    <string name="action_bar_title_seleccionar_convenios">Seleccionar convenios</string>
    <string name="action_bar_title_restablecer_contraseña">Restablecer Contraseña</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_weak_password">Contraseña muy debil</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
    <string name="txt_hint_nombre">Nombre</string>
    <string name="txt_hint_apellido">Apellido</string>
    <string name="txt_hint_fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="txt_hint_casilla_email">Casilla E-mail</string>
    <string name="txt_hint_password">Contraseña</string>
    <string name="txt_hint_repetir_password">Repetir Contraseña</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_completar_mi_perfil">Completar Mi Perfil</string>
    <string name="tu_cuenta_ha_sido_creada">Tu cuenta ha sido creada</string>
    <string name="btn_ok">OK</string>
    <string name="toast_error_text">Ups! Ocurrio un error, intente luego</string>
    <string name="error_incorrect_username_or_password">Usuario o contraseña incorrectos</string>
    <string name="login_inicia_sesion">¡Inicia sesión para personalizar \n la app a tu medida!</string>
    <string name="login_ingresar_con_mi_usuario">Ingresar con mi usuario</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="login_ingresar_sin_registrarse">Ingresar sin registrarse</string>
    <string name="content_description_avatar">Avatar of the user to be displayed</string>
    <string name="login_change_photo">Tocar aquí para \n cambiar imagen</string>
    <string name="login_image_txt_ingreso">Ingreso</string>
    <string name="login_edit_text_hint_usuario">Usuario</string>
    <string name="login_edit_text_hint_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_forgot_password">OLVIDÉ MI CONSTRASEÑA</string>
    <string name="content_description_pharmacy_photo">Pharmacy photo to be displayed</string>
    <string name="content_description_show_pharmacy_details">button to show pharmacy details</string>
    <string name="txt_se_han_encontrado">Se han encontrado</string>
    <string name="txt_te_enviaremos_la_contraseña">Te enviaremos una \n nueva contraseña</string>
    <string name="btn_send_password">Enviar Contraseña</string>
    <string name="txt_hint_email">E-Mail</string>
    <string name="nav_title_menu_inicio">Menú Inicio</string>
    <string name="nav_title_alerta_toma">Alerta de Toma</string>
    <string name="nav_title_alerta_de_recompra">Alerta de Recompra</string>
    <string name="nav_title_recordar_visitar_al_medico">Visita al médico</string>
    <string name="nav_title_fav">Favoritos</string>
    <string name="nav_title_about_us">Acerca de</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="rate_us">Evalúanos</string>
    <string name="show_terms_and_conditions">Ver Términos \n y Condiciones</string>
    <string name="guest_name">Invitado</string>
    <string name="txt_search_lab">Buscar Laboratorio</string>
    <string name="txt_search_product">Buscar Producto</string>
    <string name="content_description_pacient_program">Pacient Program Image to be displayed</string>
    <string name="content_description_lab">Lab Image to be displayed</string>
    <string name="content_description_share_button">Share Button</string>
    <string name="action_bar_title_programa_paciente">Programa Paciente</string>
    <string name="btn_programa_paciente">Ver Beneficio en Programa Paciente</string>
    <string name="content_description_product_photo">Product photo to be displayed</string>
    <string name="toast_error_isapre_not_selected">Débe seleccionar una ISAPRE</string>
    <string name="toast_user_data_updated">Datos actualizados!</string>
    <string name="error_invalid_name">Nombre invalido</string>
    <string name="error_invalid_product">Debe seleccionar un producto</string>
    <string name="error_password_invalid">Contraseña invalida</string>
    <string name="btn_home_programa_paciente">BENEFICIOS GES / \n PROGRAMA PACIENTE</string>
    <string name="buscar">Buscar</string>
    <string name="share">Compartir</string>
    <string name="quiero_subscribirme_a_este_programa">Quiero subscribirme a este programa</string>
    <string name="ver_mas">Ver más</string>
    <string name="ver_menos">Ver menos</string>
    <string name="datos_enviados">DATOS ENVIADOS</string>
    <string name="confirmation_subscription">Un representante se contactará \n contigo a la brevedad</string>
    <string name="must_be_loged_to_subscribe">Debes estar logeado para subscribirte</string>
    <string name="already_subscribed">Estás subscripto a este programa</string>
    <string name="action_bar_title_mis_recordatorios_de_toma">Mis Alertas</string>
    <string name="content_description_delete_button">Delete row button</string>
    <string name="action_bar_title_add_recordatorio_de_toma">Nueva Alerta</string>
    <string name="agregar_recordatorio">Agregar recordatorio</string>
    <string name="configurar_recordatorio">Configurar Recordatorio</string>
    <string name="nombre_del_medicamento">Nombre del Medicamento</string>
    <string name="action_bar_title_add_recordatorio_de_visita">Nueva Visita</string>
    <string name="lbl_posologia">Posología/Toma</string>
    <string name="lbl_hora_inicio">Horario de Inicio</string>
    <string name="lbl_fecha_termino">Fecha Término</string>
    <string name="lbl_fecha_inicio">Fecha Inicio</string>
    <string name="lbl_dosis">Dosis</string>
    <string name="lbl_unidad">Unidad</string>
    <string name="nav_title_my_account">Mi perfil</string>
    <string name="reset_password">Cambiar contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="asunto">Asunto</string>
    <string name="comentarios">Comentarios</string>
    <string name="cadena">Cadena</string>
    <string name="descripcion">Descripción</string>
    <string name="link_sitio_web">Link sitio web</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="laboratorio">Laboratorio</string>
    <string name="gramaje_o_ml">Gramaje o ml</string>
    <string name="cantidad">Cantidad</string>
    <string name="cadena_farmacia">Cadena farmacia</string>
    <string name="precio_pagado">Precio pagado</string>
    <string name="descuento">Descuento</string>
    <string name="precio">Precio</string>
    <string name="correccion">Corrección</string>
    <string name="sin_stock">Sin stock</string>
    <string name="nav_title_programa_paciente">Programa Paciente</string>
    <string name="nav_title_bioequivalencias">Bioequivalencias</string>
</resources>