<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="18dp"
    tools:context="com.orugga.yapp.fragments.colabora.ColaboraReportarPromocionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/txtCadenaFarmacia"
            style="@style/EditTextColabora"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/cadena" />

        <EditText
            android:id="@+id/txtDescripcion"
            style="@style/EditTextColabora"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/descripcion"
            android:inputType="textCapSentences"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txtSitioWeb"
            style="@style/EditTextColabora"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/link_sitio_web"
            android:inputType="textUri"
            android:visibility="gone" />

        <include
            android:id="@+id/photoSelector"
            layout="@layout/photo_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="18dp"
            android:background="@drawable/bg_btn_blue_rounded"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/btn_ok"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


    </LinearLayout>

</FrameLayout>
