<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/tilde_ok"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/datos_enviados"
        android:textColor="@color/naranjaAccent"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:lines="2"
        android:text="@string/confirmation_subscription"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/btn_ok"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

</LinearLayout>